[gd_scene load_steps=2 format=3 uid="uid://shop_panel"]

[ext_resource type="Script" path="res://scenes/ui/shop/shop_panel.gd" id="1_panel"]

[node name="ShopPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="DimOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.75)

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(1100, 700)
layout_mode = 2
theme_override_styles/panel = null

[node name="Background" type="ColorRect" parent="MainContainer/MainPanel"]
layout_mode = 2
color = Color(0.08, 0.085, 0.095, 0.98)

[node name="PanelMargin" type="MarginContainer" parent="MainContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VerticalLayout" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderBar" type="PanelContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2

[node name="HeaderBG" type="ColorRect" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar"]
layout_mode = 2
color = Color(0.12, 0.13, 0.14, 1)

[node name="HeaderMargin" type="MarginContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 12

[node name="HeaderContent" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin"]
layout_mode = 2

[node name="ShopIcon" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.75, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "⬡"

[node name="TitleLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.92, 1)
theme_override_font_sizes/font_size = 20
text = "  ARMORY"

[node name="Spacer" type="Control" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsContainer" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CreditsIcon" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent/CreditsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.85, 0.55, 1)
theme_override_font_sizes/font_size = 18
text = "◈"

[node name="CreditsLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent/CreditsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.85, 0.55, 1)
theme_override_font_sizes/font_size = 18
text = "5,000"

[node name="Spacer2" type="Control" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CloseButton" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/HeaderBar/HeaderMargin/HeaderContent"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "✕"
flat = true

[node name="ContentArea" type="HSplitContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="ShopItemsSection" type="PanelContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea"]
custom_minimum_size = Vector2(580, 0)
layout_mode = 2

[node name="ShopBG" type="ColorRect" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection"]
layout_mode = 2
color = Color(0.06, 0.065, 0.07, 1)

[node name="ShopMargin" type="MarginContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ShopLayout" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="CategoryTabs" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin/ShopLayout"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WeaponsTab" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin/ShopLayout/CategoryTabs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "WEAPONS"

[node name="AmmoTab" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin/ShopLayout/CategoryTabs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
toggle_mode = true
text = "AMMO"

[node name="GearTab" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin/ShopLayout/CategoryTabs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
toggle_mode = true
text = "GEAR"

[node name="ItemsScroll" type="ScrollContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin/ShopLayout"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemsList" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/ShopItemsSection/ShopMargin/ShopLayout/ItemsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="DetailsSection" type="PanelContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsBG" type="ColorRect" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection"]
layout_mode = 2
color = Color(0.07, 0.075, 0.082, 1)

[node name="DetailsMargin" type="MarginContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="DetailsLayout" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ItemPreview" type="PanelContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="PreviewBG" type="ColorRect" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/ItemPreview"]
layout_mode = 2
color = Color(0.04, 0.045, 0.05, 1)

[node name="PreviewIcon" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/ItemPreview"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.35, 1)
theme_override_font_sizes/font_size = 72
text = "⌘"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemNameLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.92, 1)
theme_override_font_sizes/font_size = 22
text = "Select an item"

[node name="ItemTypeLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.55, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "BROWSE THE SHOP"

[node name="Divider" type="HSeparator" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
layout_mode = 2
theme_override_styles/separator = null

[node name="ItemDescription" type="RichTextLabel" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/default_color = Color(0.7, 0.7, 0.72, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Choose a weapon or supply from the inventory on the left to view its details."
fit_content = true
scroll_active = false

[node name="StatsContainer" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32

[node name="Stat1" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer/Stat1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 10
text = "DAMAGE"

[node name="Value" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer/Stat1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.92, 1)
theme_override_font_sizes/font_size = 20
text = "--"

[node name="Stat2" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer/Stat2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 10
text = "FIRE RATE"

[node name="Value" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer/Stat2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.92, 1)
theme_override_font_sizes/font_size = 20
text = "--"

[node name="Stat3" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer/Stat3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 10
text = "RANGE"

[node name="Value" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/StatsContainer/Stat3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.92, 1)
theme_override_font_sizes/font_size = 20
text = "--"

[node name="Spacer" type="Control" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="PurchaseSection" type="VBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PriceRow" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection"]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/PriceRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.55, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "PRICE:"

[node name="Spacer" type="Control" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/PriceRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PriceIcon" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/PriceRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.85, 0.55, 1)
theme_override_font_sizes/font_size = 20
text = "◈"

[node name="PriceValue" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/PriceRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.85, 0.55, 1)
theme_override_font_sizes/font_size = 20
text = "---"

[node name="QuantityRow" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 12

[node name="QuantityLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/QuantityRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.55, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "QUANTITY:"

[node name="Spacer" type="Control" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/QuantityRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MinusBtn" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/QuantityRow"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
text = "-"

[node name="QuantityValue" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/QuantityRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.92, 1)
theme_override_font_sizes/font_size = 18
text = "10"
horizontal_alignment = 1

[node name="PlusBtn" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection/QuantityRow"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
text = "+"

[node name="BuyButton" type="Button" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/ContentArea/DetailsSection/DetailsMargin/DetailsLayout/PurchaseSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
disabled = true
text = "PURCHASE"

[node name="FooterBar" type="PanelContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="FooterBG" type="ColorRect" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/FooterBar"]
layout_mode = 2
color = Color(0.1, 0.105, 0.115, 1)

[node name="FooterMargin" type="MarginContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/FooterBar"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 24

[node name="FooterContent" type="HBoxContainer" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/FooterBar/FooterMargin"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/FooterBar/FooterMargin/FooterContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.45, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "Click to select  •  Purchase to add to inventory  •  ESC to close"

[node name="Spacer" type="Control" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/FooterBar/FooterMargin/FooterContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VendorLabel" type="Label" parent="MainContainer/MainPanel/PanelMargin/VerticalLayout/FooterBar/FooterMargin/FooterContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.55, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "Vendor: Supply Officer"



